tests/snapshots/integration__integration_tests__step_alias__alias_concurrent_spawn_failure_has_one_source_detail.snap
---
source: tests/integration_tests/step_alias.rs
expression: stderr
---
[36m◎[39m [36mRunning alias [1mmove-away[22m: [1mcheck[22m & [1msibling[22m[39m
[0m[31m✗[39m [31mFailed to run alias 'move-away' command 'check'[39m
[107m [0m Failed to execute sh @ _REPO_
[107m [0m No such file or directory (os error 2)
